--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ ext {
     daggerVersion = '2.13'
     dataBindingVersion = '3.1.4'
     pagingVersion = '1.0.1'
-    navigationVersion = '1.0.0-alpha07'
+    navigationVersion = '1.0.0-alpha08'
     glideVersion = '4.7.1'
 }
 
@@ -76,14 +76,17 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$roomVersion"
     kapt "android.arch.persistence.room:compiler:$roomVersion"
 
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
     implementation "io.reactivex.rxjava2:rxkotlin:$rxVersion"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
 
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
-    implementation 'com.google.firebase:firebase-core:16.0.5'
-    implementation 'com.google.firebase:firebase-firestore:17.1.3'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
