--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ ext {
     daggerVersion = '2.13'
     dataBindingVersion = '3.1.4'
     pagingVersion = '1.0.1'
-    navigationVersion = '1.0.0-alpha08'
+    navigationVersion = '1.0.0-alpha09'
     glideVersion = '4.7.1'
 }
 
@@ -95,6 +95,7 @@ dependencies {
 
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.ibrahimsn98:android-particles:1.4'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
